[package]
name = "gosub_shared"
version = "0.1.1"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"
description = "Gosub shared code"

[dependencies]
parking_lot = "0.12"
chardet = "0.2.4"
thiserror = "2.0.18"
url = "2.5.8"
anyhow = "1.0.102"
lazy_static = "1.5.0"
uuid = { version = "1.22.0", features = ["v4", "js"] }
rand = "0.10.1"
chardetng = "0.1.17"
encoding_rs = "0.8.35"
derive_more = {version = "2.1.1", features = ["display"]}
log = "0.4.29"
raw-window-handle = "0.6.2"
smallvec = "1.15.1"
image = "0.25.10"


[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.91"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3.91", features = ["Performance", "Window", "Worker", "WorkerOptions", "WorkerType"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = "0.3.32"

[dev-dependencies]
wasm-bindgen-test = "0.3.64"