[package]
name = "gosub_shared"
version = "0.1.1"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"
description = "Gosub shared code"

[dependencies]
parking_lot = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
uuid = { workspace = true, features = ["v4", "js"] }
rand = { workspace = true }
chardetng = "1.0.0"
encoding_rs = "0.8.35"
derive_more = { workspace = true, features = ["display"] }
log = { workspace = true }


[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
getrandom = { workspace = true, features = ["wasm_js"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["Performance", "Window", "Worker", "WorkerOptions", "WorkerType"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.64"
# Mirrors the workspace lints, except unsafe_code is "deny" instead of "forbid":
# this crate has justified unsafe (allowed per-site with a SAFETY comment).
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
