[package]
name = "gosub_shared"
version = "0.1.1"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"
description = "Gosub shared code"

[dependencies]
parking_lot = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
uuid = { workspace = true, features = ["v4", "js"] }
chardetng = "1.0.0"
encoding_rs = "0.8.35"
memchr = "2.8"
derive_more = { workspace = true, features = ["display"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# getrandom's wasm_js feature must be activated for uuid v4 on wasm
getrandom = { workspace = true, features = ["wasm_js"] }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["Performance", "Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
wasm-bindgen-test = "0.3.64"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
js-sys = { workspace = true }
# Mirrors the workspace lints, except unsafe_code is "deny" instead of "forbid":
# this crate has justified unsafe (allowed per-site with a SAFETY comment).
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
